# libnv-portable

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  cnv.h  cnvlist.c  dnv.h  dnvlist.c  msgio.h  nv.h  nv_impl.h  nvlist.c  nvlist_impl.h  nvp.pc.in  nvpair.c  nvpair_impl.h
cmake/: FindAtf-C++.cmake  FindAtf-C.cmake
doc/: cnv.3  dnv.3  nv.3
include/: cnv.h  dnv.h  nv.h
src/: cnvlist.c  common_impl.h  dnv.h  dnvlist.c  msgio.c  nv_impl.h  nvlist.c  nvlist_impl.h  nvpair.c  nvpair_impl.h
tests/: Kyuafile  cnv_tests.cc  dnv_tests.cc  nv_array_tests.cc  nv_tests.cc  nvlist_add_test.c  nvlist_append_test.c  nvlist_exists_test.c  nvlist_free_test.c  nvlist_get_test.c  nvlist_move_test.c  nvlist_send_recv_test.c
